# lnk-proj

./: .gitignore  README.md  main.py  pyproject.toml  test_local.py
results/: 20260319_145209_ai_engineer.json
src/mcp_trends/: api.py  config.py  models.py  server.py  source_registry.py
src/mcp_trends/chains/: summarizer.py
src/mcp_trends/sources/: _feed_utils.py  arxiv.py  github.py  google.py  google_news.py  hackernews.py  linkedin.py  podcast.py  reddit.py  rss.py  youtube.py
